# trackplot

./: .dockerignore  .gitignore  AppImageBuilder.yml  Dockerfile  Pipfile  README.md  WebDockerfile  cmdAppImageBuilder.yml  environment.yaml  main.py  mkdocs.yml  pyproject.toml  requirements.txt  server.py  settings.ini  setup.py  webAppImageBuilder.yml
bench/: READMD.md  README.md  bench.py  main.py  pipeline.md  plot.R  requirements.txt  run_ggsashimi.py  run_miso.py  run_sashimipy.py  run_trackplot.py
conf/: DomainSetting.py  config.py  drawing.py  drawling.py  heatmap.py  logger.py
docs/: command.md  command_line_usage.md  conf.py  docker.md  index.md  index.rst  installation.md  interactive.html  interactive.ipynb  interactive.md  requirements.txt  web.md
example/: Li_et_al_2015_thres0.05_delta0.01_fdr_domains.bed.gz.tbi  PolyASite.chr1.atlas.clusters.2.0.GRCh38.96.bed.gz.tbi  PolyASite.chr1.atlas.clusters.2.0.GRCh38.96.simple.bed.gz.tbi  SRX8994511.example.bed.gz.tbi  SRX9697989.corrected_reads.3.bed.gz.tbi  SRX9697989.corrected_reads.6.bed.gz.tbi  SRX9697989.corrected_reads.bed.gz.tbi  bam_list.txt  barcode_list.tsv  bigwig_list.txt  circRNA.tsv  custome_junction.tsv  density_list.2.tsv  density_list.tsv  depth.bgz  depth.bgz.tbi  example.sorted.gtf.gz.tbi  heatmap_list.tsv  hic.2.tsv  hic.tsv  igv.2.tsv  igv.3.tsv  igv.m6a.tsv  igv.tsv  interval_list.tsv  junctions.tsv  line_list.tsv  same_y_groups.tsv  test.2.bed.gz.tbi  test.bed.gz.tbi
example/bams/: 0.bam  0.bam.bai  1.bam  1.bam.bai  2.bam  2.bam.bai  3.bam  3.bam.bai  4.bam  4.bam.bai  WASH7P.bam  WASH7P.bam.bai  fl.bam  fl.bam.bai  sc.bam  sc.bam.bai
example/bws/: 0.bw  1.bw  2.bw  3.bw  4.bw
example/circRNA_bam/: SRR9029986.bam  SRR9029986.bam.bai  SRR9029988.bam  SRR9029988.bam.bai  SRR9029992.bam  SRR9029992.bam.bai  SRR9029993.bam  SRR9029993.bam.bai  SRR9029994.bam  SRR9029994.bam.bai  SRR9029995.bam  SRR9029995.bam.bai
sashimi/: __init__.py  cli.py  plot.py  plot_func.py  plot_tests.py
sashimi/anno/: AxLabel.py  Stroke.py  theme.py
sashimi/base/: CoordinateMap.py  GenomicLoci.py  Junction.py  (+7 more)
src/: Bigwig.py  CoordinateMap.py  DomainSetting.py  FetchGene.py  GenomicLoci.py  Protein.py  ReadDepth.py  SpliceRegion.py  Transcript.py  pyUniprot.py
trackplot/: __init__.py  cli.py  plot.py  plot_func.py  plot_tests.py  server.py
web/: auto-imports.d.ts  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vue.config.js
(+129 files in other folders)
