[tool.poetry]
name = "trackplot"
version = "0.2.2"
description = "The trackplot is a tool for visualizing various next-generation sequencing (NGS) data, including DNA-seq, RNA-seq, single-cell RNA-seq and full-length sequencing datasets. https://sashimi.readthedocs.io/"
authors = ["ygidtu <ygidtu@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "trackplot"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
adjusttext = "^0.7.3"
cairocffi = "^1.4.0"
click = "^8.1.3"
click-option-group = "^0.5.5"
filetype = "^1.2.0"
hicmatrix = "^15"
loguru = "^0.6.0"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
pandas = "^1.5.3"
pybigwig = "^0.3.18"
pysam = "^0.20.0"
requests = "^2.28.2"
scipy = "^1.10.0"
seaborn = "^0.12.2"
xmltodict = "^0.13.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
secondary = false


[[tool.poetry.source]]
name = "official"
url = "https://pypi.org/simple"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trackplot = "trackplot.cli:main"