[tool.poetry]
name = "trackplot"
version = "0.3.3"
description = "The trackplot is a tool for visualizing various next-generation sequencing (NGS) data, including DNA-seq, RNA-seq, single-cell RNA-seq and full-length sequencing datasets. https://sashimi.readthedocs.io/"
authors = ["ygidtu <ygidtu@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "trackplot"}]
include = [
    {path="pyproject.toml", format = ["sdist", "wheel"]},
    {path="ui/*", format = ["sdist", "wheel"]},
    {path="ui/assets/*", format = ["sdist", "wheel"]}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
adjusttext = "^0.7.3"
cairocffi = "^1.4.0"
click = "^8.1.3"
click-option-group = "^0.5.5"
filetype = "^1.2.0"
hicmatrix = "^15"
loguru = "^0.6.0"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
pandas = "^1.5.3"
pybigwig = "^0.3.18"
pysam = "^0.21.0"
requests = "^2.28.2"
scipy = "^1.10.0"
seaborn = "^0.12.2"
xmltodict = "^0.13.0"
flask = "^2.3.2"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trackplot = "trackplot.cli:main"
